# dynamical-org_notebooks

./: .gitignore  AGENTS.md  README.md  connection_diagnostics.py  ecmwf-ifs-ens-forecast-15-day-0-25-degree-icechunk.ipynb  ecmwf-ifs-ens-forecast-15-day-0-25-degree.ipynb  environment.yml  noaa-gefs-forecast-35-day-icechunk.ipynb  noaa-gefs-forecast-35-day.ipynb  noaa-stations+gefs.ipynb  pyproject.toml
.github/workflows/: test-notebooks.yml
.internal/: create_icechunk_versions.py  run_notebooks.py
tests/: test_notebook_execution.py
